--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "drupal/queenslaw_clcw",
   "description": "A custom theme developed for the Queen's University Faculty of Law Centre for Law in the Contemporary Workplace website by Purely Interactive.",
   "type": "drupal-custom-theme",
-  "homepage": "http://clcw.law.queensu.ca/",
+  "homepage": "http://law.queensu.ca/",
   "authors": [
     {
       "name": "Noah St. Amand",
